use responsive linebreak

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="wrap">
             <div class="content">
-                <h1>A web developer, HTML5 believer and also just a geek. <br/> I like coffee and beer.</h1>
+                <h1><span class="responsive-line">A web developer, HTML5 believer and also just a geek.</span> </span class="responsive-line">I like coffee and beer.</span></h1>
 
                 <hr/>
 
